Alteracoes na API
