# openapi.yaml
@@ -17,168 +17,33 @@ servers:
 - url: https://petstore.swagger.io/v2
 - url: http://petstore.swagger.io/v2
 tags:
-- name: pet
-  description: Everything about your Pets
+- name: transit GTFS
+  description: Everything related to GTFS 
   externalDocs:
     description: Find out more
     url: http://swagger.io
-- name: store
-  description: Access to Petstore orders
-- name: user
-  description: Operations about user
+- name: static
+  description: Static GTFS
   externalDocs:
-    description: Find out more about our store
+    description: Find more about static GTFS
+    url: https://developers.google.com/transit/gtfs
+- name: realtime
+  description: Realtime GTFS
+  externalDocs:
+    description: Find more about realtime GTFS
     url: http://swagger.io
 paths:
-  /pet:
-    put:
-      tags:
-      - pet
-      summary: Update an existing pet
-      operationId: updatePet
-      requestBody:
-        description: Pet object that needs to be added to the store
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Pet'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/Pet'
-        required: true
-      responses:
-        400:
-          description: Invalid ID supplied
-          content: {}
-        404:
-          description: Pet not found
-          content: {}
-        405:
-          description: Validation exception
-          content: {}
-      security:
-      - petstore_auth:
-        - write:pets
-        - read:pets
-    post:
-      tags:
-      - pet
-      summary: Add a new pet to the store
-      operationId: addPet
-      requestBody:
-        description: Pet object that needs to be added to the store
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Pet'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/Pet'
-        required: true
-      responses:
-        405:
-          description: Invalid input
-          content: {}
-      security:
-      - petstore_auth:
-        - write:pets
-        - read:pets
-  /pet/findByStatus:
+  /gtfs/static/{gtfsId}:
     get:
       tags:
-      - pet
-      summary: Finds Pets by status
-      description: Multiple status values can be provided with comma separated strings
-      operationId: findPetsByStatus
-      parameters:
-      - name: status
-        in: query
-        description: Status values that need to be considered for filter
-        required: true
-        style: form
-        explode: true
-        schema:
-          type: array
-          items:
-            type: string
-            default: available
-            enum:
-            - available
-            - pending
-            - sold
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/xml:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Pet'
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Pet'
-        400:
-          description: Invalid status value
-          content: {}
-      security:
-      - petstore_auth:
-        - write:pets
-        - read:pets
-  /pet/findByTags:
-    get:
-      tags:
-      - pet
-      summary: Finds Pets by tags
-      description: Muliple tags can be provided with comma separated strings. Use         tag1,
-        tag2, tag3 for testing.
-      operationId: findPetsByTags
-      parameters:
-      - name: tags
-        in: query
-        description: Tags to filter by
-        required: true
-        style: form
-        explode: true
-        schema:
-          type: array
-          items:
-            type: string
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/xml:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Pet'
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Pet'
-        400:
-          description: Invalid tag value
-          content: {}
-      deprecated: true
-      security:
-      - petstore_auth:
-        - write:pets
-        - read:pets
-  /pet/{petId}:
-    get:
-      tags:
-      - pet
-      summary: Find pet by ID
-      description: Returns a single pet
+      - static
+      summary: Find gtfs by ID
+      description: Returns a single GTFS
       operationId: getPetById
       parameters:
-      - name: petId
+      - name: gtfsId
         in: path
-        description: ID of pet to return
+        description: ID of gtfs to return
         required: true
         schema:
           type: integer
@@ -189,10 +54,10 @@ paths:
           content:
             application/xml:
               schema:
-                $ref: '#/components/schemas/Pet'
+                $ref: '#/components/schemas/GTFS'
             application/json:
               schema:
-                $ref: '#/components/schemas/Pet'
+                $ref: '#/components/schemas/GTFS'
         400:
           description: Invalid ID supplied
           content: {}
@@ -201,42 +66,10 @@ paths:
           content: {}
       security:
       - api_key: []
-    post:
-      tags:
-      - pet
-      summary: Updates a pet in the store with form data
-      operationId: updatePetWithForm
-      parameters:
-      - name: petId
-        in: path
-        description: ID of pet that needs to be updated
-        required: true
-        schema:
-          type: integer
-          format: int64
-      requestBody:
-        content:
-          application/x-www-form-urlencoded:
-            schema:
-              properties:
-                name:
-                  type: string
-                  description: Updated name of the pet
-                status:
-                  type: string
-                  description: Updated status of the pet
-      responses:
-        405:
-          description: Invalid input
-          content: {}
-      security:
-      - petstore_auth:
-        - write:pets
-        - read:pets
     delete:
       tags:
-      - pet
-      summary: Deletes a pet
+      - static
+      summary: Deletes a gtfs
       operationId: deletePet
       parameters:
       - name: api_key
@@ -260,50 +93,12 @@ paths:
       security:
       - petstore_auth:
         - write:pets
-        - read:pets
-  /pet/{petId}/uploadImage:
-    post:
-      tags:
-      - pet
-      summary: uploads an image
-      operationId: uploadFile
-      parameters:
-      - name: petId
-        in: path
-        description: ID of pet to update
-        required: true
-        schema:
-          type: integer
-          format: int64
-      requestBody:
-        content:
-          multipart/form-data:
-            schema:
-              properties:
-                additionalMetadata:
-                  type: string
-                  description: Additional data to pass to server
-                file:
-                  type: string
-                  description: file to upload
-                  format: binary
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiResponse'
-      security:
-      - petstore_auth:
-        - write:pets
-        - read:pets
-  /store/inventory:
+        - read:pets 
+  /gtfs/static:
     get:
       tags:
-      - store
-      summary: Returns pet inventories by status
-      description: Returns a map of status codes to quantities
+      - static
+      summary: Returns all static GTFS's
       operationId: getInventory
       responses:
         200:
@@ -317,94 +112,11 @@ paths:
                   format: int32
       security:
       - api_key: []
-  /store/order:
+      /schedule:
     post:
       tags:
-      - store
-      summary: Place an order for a pet
-      operationId: placeOrder
-      requestBody:
-        description: order placed for purchasing the pet
-        content:
-          '*/*':
-            schema:
-              $ref: '#/components/schemas/Order'
-        required: true
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/Order'
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Order'
-        400:
-          description: Invalid Order
-          content: {}
-  /store/order/{orderId}:
-    get:
-      tags:
-      - store
-      summary: Find purchase order by ID
-      description: For valid response try integer IDs with value >= 1 and <= 10.         Other
-        values will generated exceptions
-      operationId: getOrderById
-      parameters:
-      - name: orderId
-        in: path
-        description: ID of pet that needs to be fetched
-        required: true
-        schema:
-          maximum: 10
-          minimum: 1
-          type: integer
-          format: int64
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/Order'
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Order'
-        400:
-          description: Invalid ID supplied
-          content: {}
-        404:
-          description: Order not found
-          content: {}
-    delete:
-      tags:
-      - store
-      summary: Delete purchase order by ID
-      description: For valid response try integer IDs with positive integer value.         Negative
-        or non-integer values will generate API errors
-      operationId: deleteOrder
-      parameters:
-      - name: orderId
-        in: path
-        description: ID of the order that needs to be deleted
-        required: true
-        schema:
-          minimum: 1
-          type: integer
-          format: int64
-      responses:
-        400:
-          description: Invalid ID supplied
-          content: {}
-        404:
-          description: Order not found
-          content: {}
-  /user:
-    post:
-      tags:
-      - user
-      summary: Create user
+      - static
+      summary: Uploud new gtfs
       description: This can only be done by the logged in user.
       operationId: createUser
       requestBody:
@@ -412,108 +124,35 @@ paths:
         content:
           '*/*':
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/Schedule'
         required: true
       responses:
         default:
           description: successful operation
           content: {}
-  /user/createWithArray:
+  /schedule:
     post:
       tags:
-      - user
-      summary: Creates list of users with given input array
-      operationId: createUsersWithArrayInput
+      - schedule
+      summary: Create new schedule
+      description: This can only be done by the logged in user.
+      operationId: createUser
       requestBody:
-        description: List of user object
+        description: Created user object
         content:
           '*/*':
             schema:
-              type: array
-              items:
-                $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/Schedule'
         required: true
       responses:
         default:
           description: successful operation
           content: {}
-  /user/createWithList:
-    post:
-      tags:
-      - user
-      summary: Creates list of users with given input array
-      operationId: createUsersWithListInput
-      requestBody:
-        description: List of user object
-        content:
-          '*/*':
-            schema:
-              type: array
-              items:
-                $ref: '#/components/schemas/User'
-        required: true
-      responses:
-        default:
-          description: successful operation
-          content: {}
-  /user/login:
+  /schedule/{scheduleId}:
     get:
       tags:
-      - user
-      summary: Logs user into the system
-      operationId: loginUser
-      parameters:
-      - name: username
-        in: query
-        description: The user name for login
-        required: true
-        schema:
-          type: string
-      - name: password
-        in: query
-        description: The password for login in clear text
-        required: true
-        schema:
-          type: string
-      responses:
-        200:
-          description: successful operation
-          headers:
-            X-Rate-Limit:
-              description: calls per hour allowed by the user
-              schema:
-                type: integer
-                format: int32
-            X-Expires-After:
-              description: date in UTC when token expires
-              schema:
-                type: string
-                format: date-time
-          content:
-            application/xml:
-              schema:
-                type: string
-            application/json:
-              schema:
-                type: string
-        400:
-          description: Invalid username/password supplied
-          content: {}
-  /user/logout:
-    get:
-      tags:
-      - user
-      summary: Logs out current logged in user session
-      operationId: logoutUser
-      responses:
-        default:
-          description: successful operation
-          content: {}
-  /user/{username}:
-    get:
-      tags:
-      - user
-      summary: Get user by user name
+      - schedule
+      summary: Get user by schedule id
       operationId: getUserByName
       parameters:
       - name: username
@@ -528,10 +167,10 @@ paths:
           content:
             application/xml:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/Schedule'
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/Schedule'
         400:
           description: Invalid username supplied
           content: {}
@@ -540,8 +179,8 @@ paths:
           content: {}
     put:
       tags:
-      - user
-      summary: Updated user
+      - schedule
+      summary: Update schedule
       description: This can only be done by the logged in user.
       operationId: updateUser
       parameters:
@@ -567,8 +206,8 @@ paths:
           content: {}
     delete:
       tags:
-      - user
-      summary: Delete user
+      - schedule
+      summary: Delete schedule
       description: This can only be done by the logged in user.
       operationId: deleteUser
       parameters:
@@ -587,34 +226,7 @@ paths:
           content: {}
 components:
   schemas:
-    Order:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-        petId:
-          type: integer
-          format: int64
-        quantity:
-          type: integer
-          format: int32
-        shipDate:
-          type: string
-          format: date-time
-        status:
-          type: string
-          description: Order Status
-          enum:
-          - placed
-          - approved
-          - delivered
-        complete:
-          type: boolean
-          default: false
-      xml:
-        name: Order
-    Category:
+    Schedule:
       type: object
       properties:
         id:
@@ -622,89 +234,47 @@ components:
           format: int64
         name:
           type: string
-      xml:
-        name: Category
-    User:
-      type: object
-      properties:
-        id:
+        owner_id:
+          type: string
+        timezone:
+          type: string
+        intervals:
+          type: string
+        created_at:
+          type: string
+        updated_at:
+          type: string
+        freq_type:
           type: integer
-          format: int64
-        username:
-          type: string
-        firstName:
-          type: string
-        lastName:
-          type: string
-        email:
-          type: string
-        password:
-          type: string
-        phone:
-          type: string
-        userStatus:
+        version_number:
           type: integer
-          description: User Status
-          format: int32
       xml:
         name: User
-    Tag:
+    Interval:
       type: object
       properties:
-        id:
-          type: integer
-          format: int64
-        name:
+        start: 
           type: string
-      xml:
-        name: Tag
-    Pet:
+        end:
+          type: string
+        repeat:
+          type: boolean
+        tags:
+          type: string
+        
+    GTFS:
       required:
       - name
-      - photoUrls
       type: object
       properties:
         id:
           type: integer
           format: int64
-        category:
-          $ref: '#/components/schemas/Category'
         name:
           type: string
           example: doggie
-        photoUrls:
-          type: array
-          xml:
-            name: photoUrl
-            wrapped: true
-          items:
-            type: string
-        tags:
-          type: array
-          xml:
-            name: tag
-            wrapped: true
-          items:
-            $ref: '#/components/schemas/Tag'
-        status:
-          type: string
-          description: pet status in the store
-          enum:
-          - available
-          - pending
-          - sold
       xml:
         name: Pet
-    ApiResponse:
-      type: object
-      properties:
-        code:
-          type: integer
-          format: int32
-        type:
-          type: string
-        message:
-          type: string
   securitySchemes:
     petstore_auth:
       type: oauth2
